ws-slo/apps/mautrix/twitter/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautrix-twitter
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      appProtocol: http
      port: 29327
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: mautrix-twitter
    app.kubernetes.io/name: mautrix-twitter
