ws-slo/apps/mautrix/twitter/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter
spec:
  rules:
    - backendRefs:
        - name: mautrix-twitter
          port: 29327
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
